--- a/page1.html
+++ b/page1.html
@@ -22,8 +22,10 @@
     
 </style>
 <body>
+    <!-- Introduction -->
     <h1>Self Introduction</h1>
     <div align="center">
+     <!-- Imagine -->
     <img src="page1...jpg"alt="photo" width=360px; height=450px></div>
     <hr>
     <p>Hi,this is simple.From ningbo provice. Now he is a sophomore at Ningbo City Vocational and Technical College. Currently studying computer Application Technology in International College</p>
@@ -38,6 +40,6 @@
     <div class="footer">
         <p>page1</p>
     </div>
-    
+    <a href="https://1448014171.github.io/ICT452-vc-web-page/page2.html">Visit page 2</a>
 </body>
 </html>
